# f3s

./: .gitignore  Cargo.toml
.cargo/: config.toml
common/src/: check.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
