[workspace]
members = ["common", "server", "client"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
# CLI 解析
clap = { version = "4.4", features = ["derive"] }

# 异步运行时
tokio = { version = "1.34", features = ["full"] }

# HTTP 服务端
axum = { version = "0.7", features = ["json"] }
axum-server = { version = "0.6", features = ["rustls"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# TLS 证书
rustls = "0.22"
rustls-pemfile = "2.0"
rcgen = "0.11"

# 错误处理和序列化
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 工具
which = "6.0"
flate2 = "1.0"
tar = "0.4"
futures = "0.3"
tokio-util = "0.7"
